created url theme param

--- a/sass/_creation-page.sass
+++ b/sass/_creation-page.sass
@@ -26,6 +26,12 @@
         & button
             padding: 12px 38px
             min-width: 196px
+            display: flex
+            align-items: center
+            justify-content: center
+        & a
+            padding: 12px 38px
+            min-width: 196px
     &__publish
         margin-left: 20px
         background-color: $primary
