--- a/style/style.css
+++ b/style/style.css
@@ -696,6 +696,20 @@ textarea {
 .creation-page__btns button {
   padding: 12px 38px;
   min-width: 196px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.creation-page__btns a {
+  padding: 12px 38px;
+  min-width: 196px;
 }
 
 .creation-page__publish {
