--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -37,6 +37,23 @@
             font-size: 14px
             line-height: 236%
             color: #FFFFFF
+
+.logo-black, .logo-red, .logo-blue
+    display: none
+
+.black .logo-black
+    display: block
+.red .logo-red
+    display: block
+.blue .logo-blue
+    display: block
+
+.black .logo-classic
+    display: none
+.red .logo-classic
+    display: none
+.blue .logo-classic
+    display: none
         
 @media screen and (max-width: 767px)
     .header
