--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,6 +1,10 @@
 .footer
     background-color: #001211
-    padding: 68px 80px 15px
+    width: 100%
+    &__wrapper
+        max-width: 1440px
+        margin: auto
+        padding: 68px 80px 15px
     &__hero
         display: flex
         justify-content: space-between
@@ -23,7 +27,7 @@
             &:last-child
                 margin-right: 0
             & a
-                color: #C3DAE2
+                color: $classicPrimary
                 transition: color 0.3s ease
                 &:hover
                     color: $primary
@@ -48,9 +52,73 @@
             color: #2D4443
             margin-left: 8px
 
+.classic .footer
+    background: #001211
+    &__menu-item a
+        color: $classicPrimary
+    &__copyright
+        border-top: 1px solid $classicTextColor
+        & span
+            color: $classicSecondary
+        & a
+            color: #2D4443
+    &__socials
+        & path
+            fill: $classicPrimary
+            &.youtube-triangle
+                fill: #001211
+    
+.black .footer
+    background: #090909
+    &__menu-item a
+        color: $blackPrimary
+    &__copyright
+        border-top: 1px solid $blackTextColor
+        & span
+            color: $blackSecondary
+        & a
+            color: #2D4443
+    &__socials
+        & path
+            fill: $blackPrimary
+            &.youtube-triangle
+                fill: #090909
+.red .footer
+    background: #230208
+    &__menu-item a
+        color: $redPrimary
+    &__copyright
+        border-top: 1px solid $redTextColor
+        & span
+            color: $redSecondary
+        & a
+            color: $redPrimary
+    &__socials
+        & path
+            fill: $redPrimary
+            &.youtube-triangle
+                fill: #230208
+.blue .footer
+    background: #031333
+    &__menu-item a
+        color: $bluePrimary
+    &__copyright
+        border-top: 1px solid $blueTextColor
+        & span
+            color: $blueSecondary
+        & a
+            color: $bluePrimary
+    &__socials
+        & path
+            fill: $bluePrimary
+            &.youtube-triangle
+                fill: #031333
+
 @media screen and (max-width: 1023px)
     .footer
         padding: 60px 0 15px
+        &__wrapper
+            padding: 0
         &__hero
             flex-direction: column
             align-items: center
@@ -66,6 +134,7 @@
         &__copyright
             display: flex
             justify-content: center
+            
 @media screen and (max-width: 425px)
     .footer
         &__menu
