--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -27,7 +27,7 @@
             margin-right: 40px
     &__item
         line-height: 1.2
-        color: $text-color
+        color: $classicTextColor
         margin-bottom: 190px
         & img
             margin-bottom: 55px
@@ -49,7 +49,7 @@
             font-family: 'Grafita'
             font-weight: 400
             font-size: 14px
-            color: #F7B941
+            color: $classicSecondary
             margin-left: 11px
     &__btn
         margin-left: auto
@@ -60,8 +60,8 @@
         border-radius: 20px
         transition: background-color .3s ease
         &:hover
-            background-color: #C3DAE2
-            border: 1px solid #C3DAE2
+            background-color: $classicPrimary
+            border: 1px solid $classicPrimary
     &__carousel-wrap
         margin-bottom: 115px
     &__carousel
@@ -82,7 +82,7 @@
         appearance: none
         outline: none
         cursor: pointer
-        border: 0.5px solid #131414
+        border: 0.5px solid $classicTextColor
         border-radius: 50%
         background: #fff
         width: 36px
@@ -91,11 +91,66 @@
         justify-content: center
         align-items: center
         margin-left: 13px
+        & svg path
+            stroke: $classicTextColor
 
 .read-more
     color: #0047FF
     margin-left: 12px
     cursor: pointer
+
+.black
+    & .page-biography
+        &__item
+            color: $blackTextColor
+        &__author
+            & span
+                color: $blackTextColor
+        &__btn
+            color: $blackTextColor
+            border: 0.5px solid $blackTextColor
+            &:hover
+                background-color: $blackPrimary
+                border: 1px solid $blackPrimary
+        &__carousel-btn
+            border: 0.5px solid $blackTextColor
+            & svg path
+                stroke: $blackTextColor
+.red
+    & .page-biography
+        &__item
+            color: $redTextColor
+        &__author
+            & span
+                color: #000
+        &__btn
+            color: $redTextColor
+            border: 0.5px solid $redTextColor
+            &:hover
+                background-color: $redPrimary
+                border: 1px solid $redPrimary
+        &__carousel-btn
+            border: 0.5px solid $redTextColor
+            & svg path
+                stroke: $redTextColor
+.blue
+    & .page-biography
+        &__item
+            color: $blueTextColor
+        &__author
+            & span
+                color: $blueSecondary
+        &__btn
+            color: $blueTextColor
+            border: 0.5px solid $blueTextColor
+            &:hover
+                background-color: $bluePrimary
+                border: 1px solid $bluePrimary
+        &__carousel-btn
+            border: 0.5px solid $blueTextColor
+            & svg path
+                stroke: $blueTextColor
+        
 
 @media screen and (max-width: 1240px)
     .page-biography
