--- a/sass/_page-media.sass
+++ b/sass/_page-media.sass
@@ -46,6 +46,11 @@
             line-height: 1.2
             color: #131414
             margin-top: 19px
+            margin-bottom: 5px
+        & p
+            font-size: 14px
+            line-height: 1.2
+            color: $classicSecondary
     &__video-item
         position: relative
         & img
@@ -60,8 +65,8 @@
         bottom: 0
         left: 0
         right: 0
-        background: #C3A195B2
-        color: #fff
+        background: linear-gradient(0deg, rgba(1, 28, 26, 0.5), rgba(1, 28, 26, 0.5))
+        color: $classicSecondary
         display: flex
         align-items: center
         justify-content: center
@@ -84,7 +89,7 @@
             left: 0
             right: 0
             transition: opacity 0.3s ease
-            background: #C3A195B2
+            background: linear-gradient(0deg, rgba(1, 28, 26, 0.5), rgba(1, 28, 26, 0.5))
             opacity: 0
         &:hover::after
             opacity: 1
@@ -93,6 +98,33 @@
 .page-media__video .page-media__item:hover:after
     cursor: url("../assets/cursor/Play.png"), pointer
 
+.black
+    & .page-media
+        &__item:after
+            background: linear-gradient(0deg, rgba(195, 161, 149, 0.5), rgba(195, 161, 149, 0.5))
+        &__more
+            background: linear-gradient(0deg, rgba(195, 161, 149, 0.5), rgba(195, 161, 149, 0.5))
+            color: $blackSecondary
+        &__video p
+            color: $blackPrimary
+.red
+    & .page-media
+        &__item:after
+            background: linear-gradient(0deg, rgba(51, 4, 13, 0.5), rgba(51, 4, 13, 0.5))
+        &__more
+            background: linear-gradient(0deg, rgba(51, 4, 13, 0.5), rgba(51, 4, 13, 0.5))
+            color: $redPrimary
+        &__video p
+            color: #000
+.blue
+    & .page-media
+        &__item:after
+            background: linear-gradient(0deg, rgba(6, 32, 83, 0.49), rgba(6, 32, 83, 0.49))
+        &__more
+            background: linear-gradient(0deg, rgba(6, 32, 83, 0.49), rgba(6, 32, 83, 0.49))
+            color: $bluePrimary
+        &__video p
+            color: $blueSecondary
 
 @media screen and (max-width: 1023px)
     .page-media   
