color themes, head color and head animations

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -30,6 +30,8 @@ a
     color: $text-color
 textarea
     resize: vertical
+body
+    transition: background-color 0.1s linear
 
 .container
     max-width: 906px
@@ -95,6 +97,14 @@ textarea
         color: $blueTextColor
     & .text
         color: $blueTextColor
+.classic
+    background: $classicTextColor
+.black
+    background: $blackTextColor
+.red
+    background: $redTextColor
+.blue
+    background: $blueTextColor
 
 .input__wrapper
     max-width: 414px
