change bg on scroll

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -31,7 +31,7 @@ a
 textarea
     resize: vertical
 body
-    transition: background-color 0.1s linear
+    transition: background 0.1s linear
 
 .container
     max-width: 906px
@@ -105,6 +105,9 @@ body
     background: $redTextColor
 .blue
     background: $blueTextColor
+.white
+    background: #fff !important
+    transition: background 0.3s ease
 
 .input__wrapper
     max-width: 414px
