--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -1,6 +1,6 @@
 .page-biography
     padding: 115px 0
-    background: #fff
+    background: transparent
     &__main
         max-width: 980px
         margin: auto
