--- a/sass/_page-head.sass
+++ b/sass/_page-head.sass
@@ -41,10 +41,10 @@
         font-size: 28px
         line-height: 1.2
         color: $classicSecondary
-        background-color: $classicTextColor
+        background: $classicTextColor
         padding: 0 20px
         text-align: center
-        transition: background-color 0.3s ease
+        transition: background 0.1s linear
     &__name-wrapper
         position: relative
         margin-top: -135px
