--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -29,9 +29,6 @@
         line-height: 1.2
         color: $classicTextColor
         margin-bottom: 190px
-        & img
-            margin-bottom: 55px
-            width: 100%
         & p
             font-size: 26px
             margin-bottom: 24px
@@ -41,6 +38,13 @@
                 float: left
                 line-height: 0.9
                 padding-right: 7px
+    &__img-wrapper
+        margin-bottom: 55px
+        width: 100%
+        overflow: hidden
+        & img
+            width: 100%
+            transition: transform 0.1s linear
     &__author
         font-family: 'Calvino Grande'
         font-weight: 600
