--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -114,6 +114,15 @@
             &.youtube-triangle
                 fill: #031333
 
+.footer-fixed
+    position: fixed
+    bottom: 0
+    left: 0
+    right: 0
+    z-index: -1
+    width: 100%
+    display: none
+
 @media screen and (max-width: 1023px)
     .footer
         padding: 60px 0 15px
