--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -31,7 +31,7 @@ a
 textarea
     resize: vertical
 body
-    transition: background 0.1s linear
+    transition: background 0.3s linear
 
 .container
     max-width: 906px
@@ -108,6 +108,22 @@ body
 .white
     background: #fff !important
     transition: background 0.3s ease
+
+.scrolled-to-footer
+    &.classic
+        background: #001211 !important
+        transition: background 0s
+    &.black
+        background: #090909 !important
+        transition: background 0s
+    &.red
+        background: #230208 !important
+        transition: background 0s
+    &.blue
+        background: #031333 !important
+        transition: background 0s
+.displaing
+    display: block !important
 
 .input__wrapper
     max-width: 414px
