--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -37,6 +37,8 @@
             font-size: 14px
             line-height: 236%
             color: #FFFFFF
+        & svg
+            margin-left: 5px
 
 .logo-black, .logo-red, .logo-blue
     display: none
