--- a/sass/_page-head.sass
+++ b/sass/_page-head.sass
@@ -66,7 +66,7 @@
         align-items: flex-end
         margin-bottom: 140px
     &__date
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-weight: 400
         font-size: 28px
         line-height: 2.0
